WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119595
[BlackBerry] Viewport allows scrolling when it shouldn't after rotation to landscape
https://bugs.webkit.org/show_bug.cgi?id=119595
Summary
[BlackBerry] Viewport allows scrolling when it shouldn't after rotation to la...
Jacky Jiang
Reported
2013-08-08 14:29:04 PDT
JIRA: 466384.
Attachments
Patch
(5.83 KB, patch)
2013-08-09 07:58 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-08-09 07:58:09 PDT
Created
attachment 208433
[details]
Patch
Rob Buis
Comment 2
2013-08-09 08:16:34 PDT
Comment on
attachment 208433
[details]
Patch Looks good.
WebKit Commit Bot
Comment 3
2013-08-09 09:06:20 PDT
Comment on
attachment 208433
[details]
Patch Clearing flags on attachment: 208433 Committed
r153896
: <
http://trac.webkit.org/changeset/153896
>
WebKit Commit Bot
Comment 4
2013-08-09 09:06:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug